# In your Cargo.toml

[package]
name = "tectonic-cxx"
version = "0.1.0"
edition = "2021" # "2024" is not a stable edition yet, use "2021"

[lib]
name = "tectonic"
crate-type = ["staticlib"]

[dependencies]
tectonic = { version = "0.15.0" , features = ["external-harfbuzz"] }
cxx = "1.0"
anyhow = "1.0"

[build-dependencies]
cxx-build = "1.0"
anyhow = "1.0"

# Add this section for cargo-c
[package.metadata.capi]
name = "tectonic"

[package.metadata.capi.header]
generation = false

[package.metadata.capi.install.include]
asset = [
    {from="target/tectonic.h"},
    {from="include/tectonic-cxx-interface.h"}
]

[package.metadata.capi.library]
name = "tectonic"
install_dir = "lib"

[package.metadata.capi.pkg_config]
name = "tectonic"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "be1ae8e5c5bc79aac1b8f593f5554aee1cfde54f"

[package.metadata.vcpkg.target]
x86_64-apple-darwin = { triplet = "x64-osx", install = [
    "fontconfig",
    "freetype",
    "harfbuzz[graphite2]",
    "icu",
] }
aarch64-apple-darwin = { triplet = "arm64-osx", install = [
    "fontconfig",
    "freetype",
    "harfbuzz[graphite2]",
    "icu",
] }
x86_64-unknown-linux-gnu = { install = [
    "fontconfig",
    "freetype",
    "harfbuzz[graphite2]",
    "icu",
] }
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-release", install = [
    "fontconfig",
    "freetype",
    "harfbuzz[graphite2]",
    "icu",
] }

[features]
default = []
capi = []